<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>net.coderextreme</groupId>
	<artifactId>X3DJSONLD</artifactId>
	<version>11.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>X3DJSONLD</name>
	<description>X3D JSON Loader and associated tools</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<!-- configure the versions you want to use here -->
		<slf4j-version>1.7.12</slf4j-version>
		<!--
		<log4j.version>1.2.17</log4j.version>
		-->

		<!-- maven plugin versions -->
		<exec-maven-plugin.version>1.5.0</exec-maven-plugin.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>2.22.22</maven-surefire-plugin.version>
		<xml-maven-plugin.version>1.0.2</xml-maven-plugin.version>
	</properties>
	<licenses>
		<license>
			<name>Open-Source Software License for Web3D Consortium</name>
			<url>LICENSE.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<pluginRepositories>
		<pluginRepository>
			<id>mvn-plugins</id>
			<name>mvnplugins-release</name>
			<url>https://mvnrepository.com/artifacts</url>
		</pluginRepository>
	</pluginRepositories>
	<repositories>
		<repository>
			<id>mvn</id>
			<name>mvnlibs-release</name>
			<url>https://mvnrepository.com/artifacts</url>
		</repository>
		<repository>
			<id>sonatype-nexus</id>
			<url>https://oss.sonatype.org/content/groups/public</url>
		</repository>
	</repositories>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/org.graalvm.polyglot/js-community -->
<dependency>
    <groupId>org.graalvm.polyglot</groupId>
    <artifactId>js-community</artifactId>
    <version>24.0.0</version>
    <type>pom</type>
    <scope>runtime</scope>
</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>

		<!-- logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>${slf4j-version}</version>
		</dependency>
		<!--
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		-->
		<!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
		<dependency>
		    <groupId>net.sf.saxon</groupId>
		    <artifactId>Saxon-HE</artifactId>
		    <version>10.6</version>
		</dependency>

		<dependency>
			<groupId>org.web3d.x3d</groupId>
			<artifactId>X3DJSAIL</artifactId>
			<version>4.0.full</version>
		</dependency>
		<dependency>
		    <groupId>org.glassfish</groupId>
		    <artifactId>javax.json</artifactId>
		    <version>1.0.4</version>
		</dependency>
		<dependency>
		    <groupId>org.graalvm.js</groupId>
		    <artifactId>js</artifactId>
		    <version>20.2.0</version>
		</dependency>
	</dependencies>

	<build>
		<defaultGoal>install</defaultGoal>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>20</source>
					<target>20</target>
					<fork>true</fork>
					<maxmem>4096m</maxmem>
					<executable>C:/graalvm-jdk-22_windows-x64_bin/graalvm-jdk-22+36.1/bin/javac.exe</executable>



				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>xml-maven-plugin</artifactId>
				<version>1.0.2</version>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>transform</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<transformationSets>
						<transformationSet>
							<dir>src/main/data</dir>
							<stylesheet>src/main/lib/stylesheets/X3dToJson.xslt</stylesheet>
							<includes>
								<include>**/*.x3d</include>
							</includes>
							<excludes>
								<exclude>**/*.intermediate.x3d</exclude>
								<exclude>**/*.don.x3d</exclude>
								<exclude>**/*.john.x3d</exclude>
								<exclude>**/*.new.john.x3d</exclude>
								<exclude>**/*.new</exclude>
								<exclude>**/*.new.x3d</exclude>
								<exclude>**/*.new.graal.x3d</exclude>
								<exclude>**/*.json</exclude>
							</excludes>
							<outputDir>src/main/data</outputDir>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
								  <pattern>\.x3d$</pattern>
								  <replacement>.json</replacement>
								</fileMapper>
							</fileMappers>
						</transformationSet>
						<transformationSet>
							<dir>src/main/data</dir>
							<stylesheet>src/main/lib/stylesheets/X3dToJava.xslt</stylesheet>
							<outputDir>src/main/java/net/x3djsonld/data</outputDir>
							<includes>
								<include>**/*.x3d</include>
							</includes>
							<excludes>
								<exclude>**/*.intermediate.x3d</exclude>
								<exclude>**/*.don.x3d</exclude>
								<exclude>**/*.john.x3d</exclude>
								<exclude>**/*.new.john.x3d</exclude>
								<exclude>**/*.new</exclude>
								<exclude>**/*.new.x3d</exclude>
								<exclude>**/*.new.graal.x3d</exclude>
								<exclude>**/*.json</exclude>
							</excludes>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
								  <pattern>\.x3d$</pattern>
								  <replacement>.java</replacement>
								</fileMapper>
							</fileMappers>
							<parameters>
								<parameter>
									<name>packageName</name>
									<value>net.x3djsonld.data</value>
								</parameter>
							</parameters>
						</transformationSet>
						<transformationSet>
							<dir>src/main/data</dir>
							<stylesheet>src/main/lib/stylesheets/X3dToPython.xslt</stylesheet>
							<outputDir>src/main/python/net/x3djsonld/data</outputDir>
							<includes>
								<include>**/*.x3d</include>
							</includes>
							<excludes>
								<exclude>**/*.intermediate.x3d</exclude>
								<exclude>**/*.don.x3d</exclude>
								<exclude>**/*.john.x3d</exclude>
								<exclude>**/*.new.john.x3d</exclude>
								<exclude>**/*.new</exclude>
								<exclude>**/*.new.x3d</exclude>
								<exclude>**/*.new.graal.x3d</exclude>
								<exclude>**/*.json</exclude>
							</excludes>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
								  <pattern>\.x3d$</pattern>
								  <replacement>.py</replacement>
								</fileMapper>
							</fileMappers>
							<parameters>
								<parameter>
									<name>packageName</name>
									<value>net.x3djsonld.data</value>
								</parameter>
							</parameters>
						</transformationSet>
						<transformationSet>
							<dir>src/main/data</dir>
							<stylesheet>src/main/lib/stylesheets/X3dToNodeJS.xslt</stylesheet>
							<outputDir>src/main/node/net/x3djsonld/data</outputDir>
							<includes>
								<include>**/*.x3d</include>
							</includes>
							<excludes>
								<exclude>**/*.intermediate.x3d</exclude>
								<exclude>**/*.don.x3d</exclude>
								<exclude>**/*.john.x3d</exclude>
								<exclude>**/*.new.john.x3d</exclude>
								<exclude>**/*.new</exclude>
								<exclude>**/*.new.x3d</exclude>
								<exclude>**/*.new.graal.x3d</exclude>
								<exclude>**/*.json</exclude>
							</excludes>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
								  <pattern>\.x3d$</pattern>
								  <replacement>.js</replacement>
								</fileMapper>
							</fileMappers>
							<parameters>
								<parameter>
									<name>packageName</name>
									<value>net.x3djsonld.data</value>
								</parameter>
							</parameters>
						</transformationSet>
						<!--
						<transformationSet>
							<dir>src/main/data</dir>
							<stylesheet>src/main/lib/stylesheets/X3dToES5.xslt</stylesheet>
							<outputDir>src/main/nashorn/net/x3djsonld/data</outputDir>
							<includes>
								<include>**/*.x3d</include>
							</includes>
							<excludes>
								<exclude>**/*.intermediate.x3d</exclude>
								<exclude>**/*.don.x3d</exclude>
								<exclude>**/*.john.x3d</exclude>
								<exclude>**/*.new.john.x3d</exclude>
								<exclude>**/*.new</exclude>
								<exclude>**/*.new.x3d</exclude>
								<exclude>**/*.new.graal.x3d</exclude>
								<exclude>**/*.json</exclude>
							</excludes>
							<fileMappers>
								<fileMapper implementation="org.codehaus.plexus.components.io.filemappers.RegExpFileMapper">
								  <pattern>\.x3d$</pattern>
								  <replacement>.js</replacement>
								</fileMapper>
							</fileMappers>
							<parameters>
								<parameter>
									<name>packageName</name>
									<value>net.x3djsonld.data</value>
								</parameter>
							</parameters>
						</transformationSet>
						-->
					</transformationSets>
				</configuration>
				<dependencies>
					<!-- https://mvnrepository.com/artifact/net.sf.saxon/Saxon-HE -->
					<dependency>
					    <groupId>net.sf.saxon</groupId>
					    <artifactId>Saxon-HE</artifactId>
					    <version>10.6</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
